[package]
name = "neewerctl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/linebender/druid", rev = "2f5beb8faba648c170a485b8d6a00d0d991a1737"}
druid-widget-nursery = {git="https://github.com/linebender/druid-widget-nursery.git", rev="e0b8dc54c4ef171dc7c905253a26cf881266a045", features=["derive"]}
strum = {version = "0.23.0", git="https://github.com/ratmice/strum.git", branch="enum_metadata", features=["derive"]}
enum_extra = {git="https://github.com/ratmice/enum_extra.git", features=["derive"]}
btleplug = {version = "0.9.1"}
crossfire = "0.1.7"
tokio = {version = "1.15.0", features = ["macros"]}
tokio-stream = "0.1.8"
bytemuck = {version = "1.7.3", features = ["derive"]}
lazy_static = "1.4.0"
uuid = "0.8.2"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.6"
tracing = "0.1.29"
imbl = "1.0.1"
